--- a/DEVCar.Tests/DEVCar.Tests.csproj
+++ b/DEVCar.Tests/DEVCar.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DEVCar\DEVCar.csproj" />
+  </ItemGroup>
+
 </Project>
